<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Celestial Bot</string>
    <string name="menu_settings">Settings</string>
    <string name="title_donate">Celestial Bot Donate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="position_defined">Position defined</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_whereiam">Where am I</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="elevation">Elevation</string>
    <string name="timezone">Timezone</string>
    <string name="no_data">No data</string>
    <string name="menu_about">About</string>
    <string name="reloading_passes">Passes updated</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="profile">Profile</string>
    <string name="updates">Updates</string>
    <string name="alarms">Alarms</string>
    <string name="frequency">Frequency</string>
    <string name="about_message">Unofficial client of\nwww.heavens-above.com by snoa.\nGreatings to Chris Peat,
Heavens-Above GmbH.</string>
    <string name="eulatext">"The Software is provided to you on an \"AS IS\" basis, without any technical support or
warranty of any kind including, without limitation, any warranty or condition of merchantability, fitness for a
particular purpose and non-infringement."</string>
    <string name="updatestext">"Changes:
- Initial release."</string>
    <string name="please_configure">Please, configure position and timezone in settings.</string>
    <string name="satellite_alarm">Satellite alarm</string>
    <string name="notif_text">%1$s(%2$.1f) at %3$s %4$.1f°(%5$s) %6$.1f°</string>
    <string name="getting_passes">Getting passes</string>
    <string name="download_passes">Download passes from Heavens-above</string>
    <string name="compass">Compass</string>
    <string name="connection_error">Connection error</string>
    <string name="last_update">Last update: </string>
    <string name="old_event">--:--:--</string>
    <string name="compass_time">%1$02d:%2$02d:%3$02d</string>
    <string name="donation">Donate!</string>
    <string name="billing_not_suported">Billing not suported</string>
    <string name="can_not_connect_to_market">Can not connect to Market</string>
    <string name="restoring_transactions">Restoring transactions</string>
    <string name="share">Share</string>
    <string name="select_target">Select target</string>
    <string name="celestial_bot_event">Celestial Bot Event</string>
    <string name="wrong_value">Wrong value. Must be number.</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pages">PagesActivity</string>
    <string name="enable">Enable</string>
    <string name="minimum_altitude">Minimum altitude</string>
    <string name="minimum_brightness">Minimum brightness</string>
    <string name="minutes_before">Minutes before</string>
    <string name="ringtone">Ringtone</string>
    <string name="alarm_period">Alarms period</string>
    <string name="widget_configure">Widget configure</string>
    <string name="ok">OK</string>
    <string name="background">Background</string>

</resources>