<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/menu_refresh">
    </item>
    <item
        android:id="@+id/menu_where"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_whereiam">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/menu_about">
    </item>

</menu>